--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE HTML>
 <!--
-	Dimension by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
@@ -40,7 +39,7 @@
 							<div class="inner">
 								<!-- Here is a heading where you can put your name -->
 								<h1>
-									First Last
+									Raphael Baer-Way
 								</h1>
 								<!-- 	Here is an image where you can put a picture of you. 
 									You can change the width and height attributes below to change how large
@@ -52,8 +51,9 @@
 								<!-- 	Here is a paragraph where you can put your position and institution, or
 									a short line about yourself.
 								-->
+	Dimension by HTML5 UP
 								<p>
-									Position <br> Institution
+									Undergraduate Researcher <br> UC Berkeley
 								</p>
 								<!-- Here is a paragraph where you can put a link to your CV -->
 								<p>
