--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 									Try adding "border-radius: 50%;" to the style attribute.
 								-->
-								<img src="images/Astronomy.jpg" style="width:280px; height:280px; object-fit: cover;">
+								<img src="images/Screen Shot 2021-08-24 at 9.23.14 PM.png" style="width:280px; height:280px; object-fit: cover;">
 								<!-- 	Here is a paragraph where you can put your position and institution, or
 									a short line about yourself.
 								-->
