--- a/index.html
+++ b/index.html
@@ -105,13 +105,13 @@
 							<!-- Here are three paragraphs where you can fill out information about yourself -->
 							<p>
 								<!-- Items contained in <b> tags are bolded! -->
-								<b>Education:</b>
+								<b>Education:UC Berkeley Class of 2022</b>
 							</p>
 							<p>
-								<b>Research Interests:</b>
+								<b>Research Interests: Light Echos, Supernovae, Variable stars</b>
 							</p>
 							<p>
-								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/">Include ADS link!</a>
+								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/abs/2021MNRAS.505.2530A/abstract">Include ADS link!</a>
 							</p>
 						</article>
 
@@ -125,11 +125,13 @@
 								<!-- 	A <br> tag puts in a break so that the text that follows it displays on
 									the next line.
 								-->
-								<b>Project I Title</b><br>Project description, including further links to posters, talks, publications.
+								<b>M3 Project/b><br>.Performing 4-band photometry using KAIT on M3, performed highly accurate Temperature analysis using MCMC
+								and calculated new OC values for Variable stars in M3.<a href="https://ui.adsabs.harvard.edu/abs/2021AAS...23831403J/abstract">Include ADS link!</a>
+							</p>
 							</p>
 							<p>
-								<b>Project II Title</b><br>Project description, including further links to posters, talks, publications.
-							</p>
+								<b>SN 2012aw analysise</b><br>Looking at time evolution of sn2012aw light echo, in conjunction with work making up to date lightcurves and finder charts for 28 Supernovae
+								observed with HST
 						</article>
 
 						<!-- Here is the "Community" card. -->
