--- a/index.html
+++ b/index.html
@@ -111,13 +111,13 @@
 								<b>Research Interests: Light Echos, Supernovae, Variable stars</b>
 							</p>
 							<p>
-								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/abs/2021MNRAS.505.2530A/abstract">Include ADS link!</a>
+								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/abs/2021MNRAS.505.2530A/abstract">SN 2015ap investigation</a>
 							</p>
 						</article>
 
 						<!-- Here is the "Research" card. -->
 						<article id="research">
-							<h2 class="major">Research</h2>
+							<h2 class="major">Research</h2> 
 							<span class="image main">
 								<img src="images/pic02.jpg" alt=""/>
 							</span>
@@ -130,7 +130,7 @@
 							</p>
 							</p>
 							<p>
-								<b>SN 2012aw analysise</b><br>Looking at time evolution of sn2012aw light echo, in conjunction with work making up to date lightcurves and finder charts for 28 Supernovae
+								<b>SN 2012aw analysis</b><br>Looking at time evolution of sn2012aw light echo, in conjunction with work making up to date lightcurves and finder charts for 28 Supernovae
 								observed with HST
 						</article>
 
@@ -231,6 +231,6 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
+ 
 	</body>
 </html>
