--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
 								<!-- 	A <br> tag puts in a break so that the text that follows it displays on
 									the next line.
 								-->
-								<b>M3 Project/b><br>.Performing 4-band photometry using KAIT on M3, performed highly accurate Temperature analysis using MCMC
-								and calculated new OC values for Variable stars in M3.<a href="https://ui.adsabs.harvard.edu/abs/2021AAS...23831403J/abstract">Include ADS link!</a>
+								<b>M3 Project</b><br>.Performing 4-band photometry using KAIT on M3, performed highly accurate Temperature analysis using MCMC
+								and calculated new OC values for Variable stars in M3.<a href="https://ui.adsabs.harvard.edu/abs/2021AAS...23831403J/abstract">AAS Poster</a>
 							</p>
 							</p>
 							<p>
@@ -141,10 +141,10 @@
 								<img src="images/pic03.jpg" alt=""/>
 							</span>
 							<p>
-								<b>Teaching:</b>
+								<b>Teaching:</b> Reader for Astro C10 with Alex Filippenko, Instructor for Python for Astrophysicists Decal Fall/Spring 2021
 							</p>
 							<p>
-								<b>Outreach:</b>
+								<b>Outreach:</b> Boys Club Soccer Coach for 20 children at New York Boys Club
 							</p>
 							<p>
 								<b>Equity & Inclusion:</b>
