--- a/index.html
+++ b/index.html
@@ -146,19 +146,16 @@
 							<p>
 								<b>Outreach:</b> Boys Club Soccer Coach for 20 children at New York Boys Club
 							</p>
-							<p>
-								<b>Equity & Inclusion:</b>
-							</p>
 						</article>
 
 						<!-- Here is a the "Contact" card. -->
 						<article id="contact">
 							<h2 class="major">Contact</h2>
 							<p> 
-								<b>Email:</b> 
+								<b>Email:</b>18rway@berkeley.edu 
 							</p>
 							<p> 
-								<b>Address:</b> 
+								<b>Address:</b> 2441 Carleton Street, Berkeley CA 94704
 							</p>
 
 							<!-- 	Here are the fancy icons that link to your social media.
