--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 							<h2 class="major">About Me</h2>
 							<!-- Here is an image that you can customize for this page -->
 							<span class="image main">
-								<img src="images/pic01.jpg" alt=""/>
+								<img src="images/Screen Shot 2021-08-24 at 10.43.44 PM.png" alt=""/>
 							</span>
 							<!-- Here are three paragraphs where you can fill out information about yourself -->
 							<p>
@@ -119,7 +119,7 @@
 						<article id="research">
 							<h2 class="major">Research</h2> 
 							<span class="image main">
-								<img src="images/pic02.jpg" alt=""/>
+								<img src="images/Screen Shot 2021-08-24 at 10.45.53 PM.png" alt=""/>
 							</span>
 							<p>
 								<!-- 	A <br> tag puts in a break so that the text that follows it displays on
