--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 								<b>Teaching:</b> Reader for Astro C10 with Alex Filippenko, Instructor for Python for Astrophysicists Decal Fall/Spring 2021
 							</p>
 							<p>
-								<b>Outreach:</b> Boys Club Soccer Coach for 20 children at New York Boys Club
+								<b>Outreach:</b> Boys Club Soccer Coach for 20 10 year olds at New York Boys Club
 							</p>
 						</article>
 
