--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 						<article id="community">
 							<h2 class="major">Community</h2>
 							<span class="image main">
-								<img src="images/pic03.jpg" alt=""/>
+								<img src="images/Screen Shot 2021-08-24 at 10.51.48 PM.png" alt=""/>
 							</span>
 							<p>
 								<b>Teaching:</b> Reader for Astro C10 with Alex Filippenko, Instructor for Python for Astrophysicists Decal Fall/Spring 2021
