--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 								<!-- Here is a paragraph where you can put a link to your CV -->
 								<p>
 									<!-- Note you will want to change where this points to! -->
-									<a href="assets/RBW_CV.pdf" target="_blank">Curriculum Vitae</a>
+									<a href="assets/RBW_CV_FINAL(2).pdf" target="_blank">Curriculum Vitae</a>
 								</p>
 							</div>
 						</div>
@@ -112,6 +112,9 @@
 							</p>
 							<p>
 								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/abs/2021MNRAS.505.2530A/abstract">SN 2015ap investigation</a>
+								</b> <a href="https://arxiv.org/abs/2212.00179">SNe Progenitor analysis</a>
+								</b> <a href="https://academic.oup.com/mnras/article-abstract/512/3/3195/6549938?redirectedFrom=fulltext">Lick Observatory SNe analysis</a>
+								</b> <a href="https://arxiv.org/abs/2107.14223">PIPS analysis </a>
 							</p>
 						</article>
 
@@ -125,13 +128,14 @@
 								<!-- 	A <br> tag puts in a break so that the text that follows it displays on
 									the next line.
 								-->
-								<b>M3 Project</b><br>.Performing 4-band photometry using KAIT on M3, performed highly accurate Temperature analysis using MCMC
-								and calculated new OC values for Variable stars in M3.<a href="https://ui.adsabs.harvard.edu/abs/2021AAS...23831403J/abstract">AAS Poster</a>
+								<b>Variable Stars</b><br>.Performing 4-band photometry using KAIT on M3, performed highly accurate Temperature analysis using MCMC
+								and calculated new OC values for Variable stars in M3. Integrating MESA simulations with observational data<a href="https://ui.adsabs.harvard.edu/abs/2021AAS...23831403J/abstract">AAS Poster</a>
 							</p>
 							</p>
 							<p>
-								<b>SN 2012aw analysis</b><br>Looking at time evolution of sn2012aw light echo, in conjunction with work making up to date lightcurves and finder charts for 28 Supernovae
+								<b>SN 2012aw analysis</b><br>Looking at late time evolution of sn2012aw light echo, in conjunction with work making up to date lightcurves and finder charts for 28 Supernovae
 								observed with HST
+								<b>Late-Time SNe analysis</b><br>Looking at late time evolution of 37 SNe in relation to progenitors/expected parameters and decay
 						</article>
 
 						<!-- Here is the "Community" card. -->
