--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 								<!-- 	A <br> tag puts in a break so that the text that follows it displays on
 									the next line.
 								-->
-								<b>Variable Stars</b><br>.Performing 4-band photometry using KAIT on M3, performed highly accurate Temperature analysis using MCMC
+								<b>Variable Stars</b><br>Performing 4-band photometry using KAIT on M3, performed highly accurate Temperature analysis using MCMC
 								and calculated new OC values for Variable stars in M3. Integrating MESA simulations with observational data<a href="https://ui.adsabs.harvard.edu/abs/2021AAS...23831403J/abstract">AAS Poster</a>
 							</p>
 							</p>
