--- a/index.html
+++ b/index.html
@@ -134,7 +134,9 @@
 							</p>
 							<p>
 								<b>SN 2012aw analysis</b><br>Looking at late time evolution of sn2012aw light echo, in conjunction with work making up to date lightcurves and finder charts for 28 Supernovae
-								observed with HST
+								observewwd with cc
+							</p>
+							</p>
 								<b>Late-Time SNe analysis</b><br>Looking at late time evolution of 37 SNe in relation to progenitors/expected parameters and decay
 						</article>
 
@@ -145,7 +147,7 @@
 								<img src="images/Screen Shot 2021-08-24 at 10.51.48 PM.png" alt=""/>
 							</span>
 							<p>
-								<b>Teaching:</b> Reader for Astro C10 with Alex Filippenko, Instructor for Python for Astrophysicists Decal Fall/Spring 2021
+								<b>Teaching:</b> TA for Astro C10 with Alex Filippenko and Astron 9 with Courtney Dressing, Instructor for Python for Astrophysicists Decal Fall/Spring 2021
 							</p>
 							<p>
 								<b>Outreach:</b> Boys Club Soccer Coach for 20 10 year olds at New York Boys Club
