--- a/index.html
+++ b/index.html
@@ -105,15 +105,21 @@
 							<!-- Here are three paragraphs where you can fill out information about yourself -->
 							<p>
 								<!-- Items contained in <b> tags are bolded! -->
-								<b>Education:UC Berkeley Class of 2022</b>
+								<b>Education:UC Berkeley Class of 2022 GPA 3.878/4</b>
+								<b>Cal Club Soccer President 2019-2021</b>
+								<b>I am a student interested in Astrophysics who also seeks to bring astrophysics to everyone. 
+								I try to do this through my teaching explicitly, and my research as well. Beyond the classroom and laboratory, I enjoy playing soccer. I also enjoy playing the violin.</b>
 							</p>
 							<p>
 								<b>Research Interests: Light Echos, Supernovae, Variable stars</b>
 							</p>
 							<p>
 								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/abs/2021MNRAS.505.2530A/abstract">SN 2015ap investigation</a>
+							</p>	
 								</b> <a href="https://arxiv.org/abs/2212.00179">SNe Progenitor analysis</a>
+							</p>		
 								</b> <a href="https://academic.oup.com/mnras/article-abstract/512/3/3195/6549938?redirectedFrom=fulltext">Lick Observatory SNe analysis</a>
+							</p>				
 								</b> <a href="https://arxiv.org/abs/2107.14223">PIPS analysis </a>
 							</p>
 						</article>
