Fix formatting and update content in index.html

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 								I try to do this through my teaching explicitly, and my research as well. Beyond the classroom and laboratory, I enjoy playing soccer. I also enjoy playing the violin.</b>
 							</p>
 							<p>
-								<b>Research Interests: Light Echos, Supernovae, Variable stars</b>
+								<b>Research Interests: Core-Collapse supernovae, Circumstellar interaction</b>
 							</p>
 							<p>
 								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/abs/2021MNRAS.505.2530A/abstract">SN 2015ap investigation</a>
@@ -139,11 +139,13 @@
 							</p>
 							</p>
 							<p>
-								<b>SN 2012aw analysis</b><br>Looking at late time evolution of sn2012aw light echo, in conjunction with work making up to date lightcurves and finder charts for 28 Supernovae
-								observewwd with cc
+								<b>Observations of strongly-interacting CCSNe</b><br>Looking at X-ray, optical/IR and radio observations of type IIn and Ibn supernovae to understand the likely causes
+								for extensive mass-loss at late phases in these objects.
+								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/abs/2025ApJ...983..101B/abstract">Multiwavlength study of SN 2020ywx</a>	
 							</p>
 							</p>
 								<b>Late-Time SNe analysis</b><br>Looking at late time evolution of 37 SNe in relation to progenitors/expected parameters and decay
+								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/abs/2024ApJ...964..172B/abstract">Late-time study of 37 SNe/a>
 						</article>
 
 						<!-- Here is the "Community" card. -->
@@ -204,3 +206,4 @@
  
 	</body>
 </html>
+
