--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 									a short line about yourself.
 								-->
 								<p>
-									Undergraduate Researcher <br> UC Berkeley
+									Graduate Researcher <br> University of Virginia
 								</p>
 								<!-- Here is a paragraph where you can put a link to your CV -->
 								<p>
@@ -206,4 +206,5 @@
  
 	</body>
 </html>
+
 
