--- a/index.html
+++ b/index.html
@@ -134,17 +134,16 @@
 								<!-- 	A <br> tag puts in a break so that the text that follows it displays on
 									the next line.
 								-->
-								<b>Variable Stars</b><br>Performing 4-band photometry using KAIT on M3, performed highly accurate Temperature analysis using MCMC
-								and calculated new OC values for Variable stars in M3. Integrating MESA simulations with observational data<a href="https://ui.adsabs.harvard.edu/abs/2021AAS...23831403J/abstract">AAS Poster</a>
-							</p>
 							</p>
 							<p>
 								<b>Observations of strongly-interacting CCSNe</b><br>Looking at X-ray, optical/IR and radio observations of type IIn and Ibn supernovae to understand the likely causes
 								for extensive mass-loss at late phases in these objects.
-								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/abs/2025ApJ...983..101B/abstract">Multiwavlength study of SN 2020ywx</a>	
+								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/abs/2025ApJ...983..101B/abstract">Multiwavelength study of SN IIn 2020ywx</a>
+								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/abs/2025arXiv250907080B/abstract">Multiwavelength study of SN Ibn 2023fyq</a>
+
 							</p>
 							</p>
-								<b>Late-Time SNe analysis</b><br>Looking at late time evolution of 37 SNe in relation to progenitors/expected parameters and decay
+								<b>Late-Time SNe analysis</b><br>Looking at late time evolution of 37 SNe in relation to progenitors/expected parameters and decay</a>
 								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/abs/2024ApJ...964..172B/abstract">Late-time study of 37 SNe/a>
 						</article>
 
@@ -206,5 +205,6 @@
  
 	</body>
 </html>
+
 
 
