Revise personal and research sections in index.html
Updated personal information and research details in the HTML file.

--- a/index.html
+++ b/index.html
@@ -105,30 +105,19 @@
 							<!-- Here are three paragraphs where you can fill out information about yourself -->
 							<p>
 								<!-- Items contained in <b> tags are bolded! -->
-								<b>Education:UC Berkeley Class of 2022 GPA 3.878/4</b>
-								<b>Cal Club Soccer President 2019-2021</b>
-								<b>I am a student interested in Astrophysics who also seeks to bring astrophysics to everyone. 
-								I try to do this through my teaching explicitly, and my research as well. Beyond the classroom and laboratory, I enjoy playing soccer. I also enjoy playing the violin.</b>
+								Hi there! I'm a graduate student at UVA studying core-collapse supernovae and mass-loss in massive stars. I am passionate about astronomy and teaching. When not working, and my research as well, I enjoy playing and watching soccer.</b>
 							</p>
 							<p>
-								<b>Research Interests: Core-Collapse supernovae, Circumstellar interaction</b>
+								<b>Research Interests: Core-Collapse supernovae, Stellar Mass Loss Circumstellar interaction</b>
 							</p>
-							<p>
-								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/abs/2021MNRAS.505.2530A/abstract">SN 2015ap investigation</a>
-							</p>	
-								</b> <a href="https://arxiv.org/abs/2212.00179">SNe Progenitor analysis</a>
-							</p>		
-								</b> <a href="https://academic.oup.com/mnras/article-abstract/512/3/3195/6549938?redirectedFrom=fulltext">Lick Observatory SNe analysis</a>
-							</p>				
-								</b> <a href="https://arxiv.org/abs/2107.14223">PIPS analysis </a>
-							</p>
+	
 						</article>
 
 						<!-- Here is the "Research" card. -->
 						<article id="research">
 							<h2 class="major">Research</h2> 
 							<span class="image main">
-								<img src="images/Screen Shot 2021-08-24 at 10.45.53 PM.png" alt=""/>
+								<img src="images/Screenshot 2025-12-02 at 4.27.42 PM.png" alt=""/>
 							</span>
 							<p>
 								<!-- 	A <br> tag puts in a break so that the text that follows it displays on
@@ -145,6 +134,9 @@
 							</p>
 								<b>Late-Time SNe analysis</b><br>Looking at late time evolution of 37 SNe in relation to progenitors/expected parameters and decay</a>
 								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/abs/2024ApJ...964..172B/abstract">Late-time study of 37 SNe/a>
+							</p>
+								<b>Understanding envelope-stripping in stripped-enevelope supernovae </b><br>Using early-time multiwavelength observations to characterize
+			
 						</article>
 
 						<!-- Here is the "Community" card. -->
@@ -154,10 +146,11 @@
 								<img src="images/Screen Shot 2021-08-24 at 10.51.48 PM.png" alt=""/>
 							</span>
 							<p>
-								<b>Teaching:</b> TA for Astro C10 with Alex Filippenko and Astron 9 with Courtney Dressing, Instructor for Python for Astrophysicists Decal Fall/Spring 2021
+								<b>Teaching:</b> TA for Astro C10 with Alex Filippenko and Astron 9 with Courtney Dressing, Instructor for Python for Astrophysicists Decal 2021-2023, TA for Astro 3130/Observational Astronomy with Steve Majewski
 							</p>
 							<p>
-								<b>Outreach:</b> Boys Club Soccer Coach for 20 10 year olds at New York Boys Club
+								<b>Outreach:</b> DSBK at UVA-extensive voluneering with underprivileged students in the community
+								<a href="https://ui.adsabs.harvard.edu/abs/2025AAS...24624305D/abstract">Serving Virginia School for the Deaf and Blind>
 							</p>
 						</article>
 
@@ -205,6 +198,7 @@
  
 	</body>
 </html>
+
 
 
 
