--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 								<!-- Here is a paragraph where you can put a link to your CV -->
 								<p>
 									<!-- Note you will want to change where this points to! -->
-									<a href="assets/RBW_CV_FINAL(2).pdf" target="_blank">Curriculum Vitae</a>
+									<a href="assets/RBW_CV_FIN.pdf" target="_blank">Curriculum Vitae</a>
 								</p>
 							</div>
 						</div>
@@ -198,6 +198,7 @@
  
 	</body>
 </html>
+
 
 
 
