Revise content in index.html
Updated personal information and research interests.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 								<!-- Here is a paragraph where you can put a link to your CV -->
 								<p>
 									<!-- Note you will want to change where this points to! -->
-									<a href="assets/RBW_CV_FIN.pdf" target="_blank">Curriculum Vitae</a>
+									<a href="assets/RBW_CV_Fin.pdf" target="_blank">Curriculum Vitae</a>
 								</p>
 							</div>
 						</div>
@@ -105,7 +105,7 @@
 							<!-- Here are three paragraphs where you can fill out information about yourself -->
 							<p>
 								<!-- Items contained in <b> tags are bolded! -->
-								Hi there! I'm a graduate student at UVA studying core-collapse supernovae and mass-loss in massive stars. I am passionate about astronomy and teaching. When not working, and my research as well, I enjoy playing and watching soccer.</b>
+								Hi there! I'm a NSF GRFP fellow at UVA studying core-collapse supernovae and mass-loss in massive stars. I am passionate about astronomy and teaching. When not working, and my research as well, I enjoy playing and watching soccer.</b>
 							</p>
 							<p>
 								<b>Research Interests: Core-Collapse supernovae, Stellar Mass Loss Circumstellar interaction</b>
@@ -198,6 +198,7 @@
  
 	</body>
 </html>
+
 
 
 
