Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -116,10 +116,13 @@
 						<!-- Here is the "Research" card. -->
 						<article id="research">
 							<h2 class="major">Research</h2> 
-							<span class="image main">
+								<span class="image main">
 								<img src="images/Screenshot 2025-12-02 at 4.27.42 PM.png" alt=""/>
-							</span>
-							<p>
+								<p class="caption">
+								Credit:Poonam Chandra
+								</p>
+								</span>
+								<p>
 								<!-- 	A <br> tag puts in a break so that the text that follows it displays on
 									the next line.
 								-->
@@ -198,6 +201,7 @@
  
 	</body>
 </html>
+
 
 
 
