--- a/index.html
+++ b/index.html
@@ -114,37 +114,57 @@
 						</article>
 
 						<!-- Here is the "Research" card. -->
+						
 						<article id="research">
-							<h2 class="major">Research</h2> 
-								<span class="image main">
-								<img src="images/Screenshot 2025-12-02 at 4.27.42 PM.png" alt=""/>
-								<p class="caption">
-								Credit:Poonam Chandra
-								</p>
-								</span>
-								<p>
-								<!-- 	A <br> tag puts in a break so that the text that follows it displays on
-									the next line.
-								-->
-							</p>
-							<p>
-								<b>Observations of strongly-interacting CCSNe</b><br>Looking at X-ray, optical/IR and radio observations of type IIn and Ibn supernovae to understand the likely causes
-								for extensive mass-loss at late phases in these objects.
-								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/abs/2025ApJ...983..101B/abstract">Multiwavelength study of SN IIn 2020ywx</a>
-								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/abs/2025arXiv250907080B/abstract">Multiwavelength study of SN Ibn 2023fyq</a>
+ 							<h2 class="major">Research</h2>
+  							<span class="image main">
+    						<img src="images/Screenshot 2025-12-02 at 4.27.42 PM.png" alt="" />
+    						<p class="caption">Credit: Poonam Chandra</p>
+  							</span>
 
-							</p>
-							</p>
-								<b>Late-Time SNe analysis</b><br>Looking at late time evolution of 37 SNe in relation to progenitors/expected parameters and decay</a>
-								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/abs/2024ApJ...964..172B/abstract">Late-time study of 37 SNe/a>
-							</p>
-								<b>Understanding envelope-stripping in stripped-enevelope supernovae </b><br>Using early-time multiwavelength observations to characterize
-			
-						</article>
+ 							 <!-- Research Area 1 -->
+ 							 <p>
+    							<strong>Observations of strongly-interacting CCSNe</strong><br />
+    							Looking at X-ray, optical/IR, and radio observations of Type IIn and Ibn
+		   						 supernovae to understand the likely causes for extensive mass-loss at late
+    							phases in these objects.
+ 							 </p>
 
-						<!-- Here is the "Community" card. -->
-						<article id="community">
-							<h2 class="major">Community</h2>
+ 							 <p>
+    							<strong>Publications:</strong><br />
+   								<a href="https://ui.adsabs.harvard.edu/abs/2025ApJ...983..101B/abstract">
+      								Multiwavelength study of SN IIn 2020ywx
+    							</a><br />
+    							<a href="https://ui.adsabs.harvard.edu/abs/2025arXiv250907080B/abstract">
+      								Multiwavelength study of SN Ibn 2023fyq
+    							</a>
+ 							 </p>
+
+  								<!-- Research Area 2 -->
+  							 <p>
+    							<strong>Late-Time SNe Analysis</strong><br />
+    								Looking at late-time evolution of 37 supernovae in relation to progenitors,
+    								expected parameters, and radioactive decay.
+  							 </p>
+
+ 							 <p>
+   								<strong>Publications:</strong><br />
+    							<a href="https://ui.adsabs.harvard.edu/abs/2024ApJ...964..172B/abstract">
+      							Late-time study of 37 SNe
+    							</a>
+  							 </p>
+
+  							<!-- Research Area 3 -->
+  						<p>
+    						<strong>Understanding envelope-stripping in stripped-envelope supernovae</strong><br />
+    							Using early-time multiwavelength observations to characterize the physical
+    							mechanisms responsible for envelope stripping.
+  						</p>
+					</article>
+
+						<!-- Here is the "Outreach" card. -->
+						<article id="outreach">
+							<h2 class="major">Outreach</h2>
 							<span class="image main">
 								<img src="images/Screen Shot 2021-08-24 at 10.51.48 PM.png" alt=""/>
 							</span>
@@ -201,6 +221,7 @@
  
 	</body>
 </html>
+
 
 
 
