--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 									<a href="#research">Research</a>
 								</li>
 								<li>
-									<a href="#community">Community</a>
+									<a href="#outreach">Outreach</a>
 								</li>
 								<li>
 									<a href="#contact">Contact</a>
@@ -221,6 +221,7 @@
  
 	</body>
 </html>
+
 
 
 
